it shows the code, yet wont change on the web page

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -78,11 +78,11 @@
 
     <h4>
       Heading Font: Galindo
-      <!-- change this -->
+      <!-- I Changed this  -->
     </h4>
     <h4>
       Paragraph Font: Stick No Bills
-      <!-- change this -->
+      <!-- I Changed this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
