--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
         <div id="hero">
             <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
-            <section id="hero-message">
+                <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+            </div>
+            <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar</h4>
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Book Now</a>
+                    <a class="book" href="rates.html">Book Now</a>
                 </div>
             </section>
-            </div>
-        </div>
+          </div>
 
         <main class="home-grid">
             <section class="rivers-card">
