--- a/starIQ/site-plan.html
+++ b/starIQ/site-plan.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="../styles/site-plan.css">
   </head>
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Star IQ Site Plan</h1>
+      <h2>Brock Ford</h2>
+      <h2>WDD 130-Pathway online</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
