--- a/starIQ/site-plan.html
+++ b/starIQ/site-plan.html
@@ -20,11 +20,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>The purpose would be to provide an all in one site for 
+        Star Wars fans. This site would be able to provide information, shopping, and a blog 
+        for all. This site can be revised to any movie or genre for more profit.
+      </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>
+        The audience would specifically target Star Wars fans and people wanting 
+        Star War memorablia.
+      </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -44,13 +50,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/f5f3f5-f7b267-f0544f-6e8894-3b3b58" target="_blank">https://coolors.co/f5f3f5-f7b267-f0544f-6e8894-3b3b58</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">[#3B3B58]</td><td class="secondary">[#6E8894]</td><td class="accent1">[#F7B267]</td><td class="accent2">[#F5F3F5]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
