--- a/starIQ/site-plan.html
+++ b/starIQ/site-plan.html
@@ -122,31 +122,37 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Knowledge Page</h3>
       <p>
-        [Written copy for the home page here]
+        People will come to my site to search, browse information, and buy items all about the Star Wars universe. The user design will look and feel much like the aesthetic of Star Wars and will really impress anyone who uses it. The site will also be very knowledgeable about the Star Wars universe and have a hub of knowledge for users to understand the story line. It will have the ability to allow users to contact and receive weekly email or phone calls about information on my site. It will also be in a mobile app version to allow any visitors or frequent views to have it on the go.
+   “The greatest teacher, failure is” -Yoda   
+Star IQ will have a search bar for anyone to quickly find any information they need, both for shopping and research. This will also allow users to search phrases or quotes from the Star Wars universe to find the direct information on where that was from, who said it, and items that correspond to those characters. It will also be placed on all pages of the website (following as you scroll) to ensure that the user always has easy access to it. Star IQ will also have a well in-depth story line that shows where each movie took place, when it took place, and who was within the story.
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <p>Images for the Knowledge page</p>
+        <img src="images/home1.jpg" alt="image for knowledge page">
+        <img src="images/home2.jpg" alt="image for knowledge page">
+        <img src="images/home3.jpg" alt="image for knowledge page">
+      </ul>
+      <h3>Star Store</h3>
+      <p>
+        Star IQ is the central hub for anything and everything Star Wars related.  It will have ability to go to a shopping store page which allows you to buy anything related to the Star Wars universe. This includes movies, action figures, Legos, lightsabers, office supplies, etc. This is a perfect site for anyone who is wanting to find this for themselves or even gifts for their friends who love Star Wars. Not only will it give a very comparable price, but it will also describe dimensions, characteristics and reviews of each product. This will also have a search area to search anything you need related to Star Wars. The shopping area will allow you to purchase on demand using your credit card information. 
+Visitors will come to my site because it will have all the information on the items rather than just selling by image. Visitors will also love that there is a way to quickly contact me, or my agents running the website to answer any questions or concerns they might have. The visitors will also enjoy my site much more than others because the look and feel of the site will resemble the Star Wars universe. It will also have a more futuristic design so that you feel like you are within the Star Wars universe. Star IQ will give any visitor ease of access as it will have everything about Star Wars in one spot. It is also very adaptable as it can be formed into a mobile app for use anytime and anywhere.
+
+      </p>
+      <p>Images for the Shopping Page 2</p>
+        <img src="images/shop1.jpg" alt="image for shopping page">
+        <img src="images/shop2.jpg" alt="image for shopping page">
+        <img src="images/icon1.png" alt="image for shopping page">
+        <img src="images/icon2.png" alt="image for shopping page">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Contact Us</h3>
       <p>
-        [Written copy for the Page 2 here]
+        There will be the ability to log in to your user account and subscribe to weekly emails or text messages about the website and its information. These will be set up by creating an account or signing into your account with the icon on top left of each page. The emails or text messages that the users will receive will send information on current topics, new hot items to buy, and trivia questions. All of these will be found within the website as well. Members on the site will have ability to contact me or any agent through our contact us page with questions or concerns. The contact us page will have all of the information and a little information about the creator, Brock Ford.
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
-      </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <p>Images for the Contact Us Page 3</p>
+        <img src="images/contact1.jpg" alt="image for contact page">
+        <img src="images/contact2.png" alt="image for contact page">
 
       </ul>
       <hr>
