--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href="page2.html">Page 2</a>
+                <a href="wwr/site-plan-rafting.html">Site Plan</a>
+                <a href="#">Contact Us</a>
             </nav>
         </header>
 
@@ -60,8 +60,8 @@
         </main>
         <footer>
             <p>Dry Oar &copy; 2022 - Brock Ford</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <p><a href="wwr/site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="#">Contact Us</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
