fixed more links

--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="page2.html">Page 2</a>
+                <a href="page2.html">Rates and Dates</a>
                 <a href="wwr/site-plan-rafting.html">Site Plan</a>
                 <a href="#">Contact Us</a>
             </nav>
