--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="page2.html">Page 2</a>
+                <a href="page2.html">Rates and Dates</a>
                 <a href="wwr/site-plan-rafting.html">Site Plan</a>
                 <a href="#">Contact Us</a>
             </nav>
@@ -29,7 +29,7 @@
                 <h1 class="home-title">Have An Adventure</h1>
                 <h4>Make Memories with Dry Oar</h4>
                 <div class="button-box">
-                    <a class="book" href="rates.html">Book Now</a>
+                    <a class="book" href="page2.html">Book Now</a>
                 </div>
             </section>
           </div>
@@ -55,7 +55,7 @@
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-                <a class='join' href="rivers.html">Join Us</a>
+                <a class='join' href="#">Join Us</a>
             </section>
         </main>
         <footer>
