Finished personal site

--- a/starIQ/site-plan.html
+++ b/starIQ/site-plan.html
@@ -102,7 +102,7 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          Knowledge Page
         </div>
         <div class="sm-page2">
           Star Store
@@ -168,23 +168,23 @@ Visitors will come to my site because it will have all the information on the it
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Knowledge Page</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        search bar follows page
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Knoweldge_wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Star Shop</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        search bar follows page
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/shop_wireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Can log into or set up email/text in contact page
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/contact_wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
