added web content

--- a/starIQ/index.html
+++ b/starIQ/index.html
@@ -6,11 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="javaScript/script.js"></script>
 </head>
 <body>
+    <!-- The overlay -->
+<div id="myNav" class="overlay">
+
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <a href="index.html">Knowlege Page</a>
+      <a href="star_store.html">Star Store</a>
+      <a href="contact_us.html">Contact Us</a>
+    </div>
+  
+  </div>
+  
+  <!-- Log in form -->
+<!-- The Modal -->
+<div id="id01" class="modal">
+    <span onclick="document.getElementById('id01').style.display='none'"
+  class="close" title="Close Modal">&times;</span>
+  
+    <!-- Modal Content -->
+    <form class="modal-content animate" action="/action_page.php">
+      <div class="imgcontainer">
+        <img src="images/logo.png" alt="Avatar" class="avatar">
+      </div>
+  
+      <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+  
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+  
+        <button type="button">Login</button>
+        <label>
+          <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+      </div>
+  
+      <div class="container" style="background-color:#f1f1f1">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <span class="psw">Forgot <a href="#">password?</a></span>
+      </div>
+    </form>
+  </div>
+
+
 
     <header>
-        <img src="images/logo.png" alt="logo_picture">
+        <img src="images/logo.png" onclick="openNav()" alt="logo_picture">
         <nav>
             <a href="index.html">Knowledge Page</a>
             <a href="star_store.html">Star Store</a>
@@ -30,7 +78,7 @@
             <button class="search_button"> <img src="images/icon2.png" alt="search button"></button>
             <input class="search_bar" type="text" placeholder="What is a Gungan?">
             <p class="middle_text">or</p>
-            <button class="log_in_button">Log in!</button>
+            <button class="log_in_button" onclick="document.getElementById('id01').style.display='block'">Log in!</button>
         </div>
 
         <div class="purpose_area">
