validated Css and Html

--- a/starIQ/index.html
+++ b/starIQ/index.html
@@ -36,10 +36,10 @@
       </div>
   
       <div class="container">
-        <label for="uname"><b>Username</b></label>
+        <label ><b>Username</b></label>
         <input type="text" placeholder="Enter Username" name="uname" required>
   
-        <label for="psw"><b>Password</b></label>
+        <label ><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
   
         <button type="button">Login</button>
@@ -50,7 +50,7 @@
   
       <div class="container" style="background-color:#f1f1f1">
         <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-        <span class="psw">Forgot <a href="#">password?</a></span>
+        <span >Forgot <a href="#">password?</a></span>
       </div>
     </form>
   </div>
